<resources>
    <string name="app_name" translatable="false">CacauB</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="lista_venda_fragment_label">CacauB</string>
    <string name="nova_venda_fragment_label" translatable="false">Nova Venda</string>
    <string name="altera_venda_fragment_label" translatable="false">Alterar Venda</string>
    <string name="elimina_venda_fragment_label" translatable="false">Eliminar Venda</string>

    <string name="novo" translatable="false">Nova</string>
    <string name="alterar" translatable="false">Alterar</string>
    <string name="eliminar" translatable="false">Eliminar</string>
    <string name="descricao" translatable="false">Descrição</string>
    <string name="venda" translatable="false">Venda</string>
    <string name="empresa" translatable="false">Empresa</string>
    <string name="guardar" translatable="false">Guardar</string>
    <string name="cancelar" translatable="false">Cancelar</string>
    <string name="novo_venda_guardado">Venda registrada com sucesso</string>
    <string name="venda_alterado">Venda alterado com sucesso</string>
    <string name="seminario_eliminado">Venda eliminado com sucesso</string>
    <string name="erro_guardar_seminario">Erro ao guardar Venda</string>
    <string name="erro_eliminar_seminario">Erro ao eliminar Venda</string>
    <string name="titulo_obrigatorio">Preencha a Descrição</string>
    <string name="valor_obrigatorio">Preencha o valor</string>
    <string name="Valor">Valor</string>
    <!--Login e Registro-->

    <string name="text_accounts">Todas as contas</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="error_message_name">Digite o nome completo</string>
    <string name="error_message_email">Digite um e-mail válido</string>
    <string name="error_message_age">Digite a idade</string>
    <string name="error_message_password">Digite a senha</string>
    <string name="success_message">Registro bem-sucedido</string>
    <string name="text_not_member">Nenhuma conta Criada? Crie uma!</string>
    <string name="text_already_member">Já é membro? Entrar!</string>
    <string name="error_email_exists">O e-mail já existe</string>
    <string name="error_password_match">Senha incorreta</string>
    <string name="error_valid_email_password">E-mail ou senha incorretos</string>
    <string name="action_settings_1">Configurações</string>
    <string name="text_hello">Olá,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voltar">Voltar</string>

</resources>