<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListaVendaFragment">

    <fragment
        android:id="@+id/ListaVendaFragment"
        android:name="ipg.mcm.cacaub.ListaVendaFragment"
        android:label="@string/lista_venda_fragment_label"
        tools:layout="@layout/fragment_lista_venda">
        <action
            android:id="@+id/action_ListaVendaFragment_to_NovoVendaFragment"
            app:destination="@id/NovoVendaFragment" />
        <action
            android:id="@+id/action_ListaVendaFragment_to_editaVendaFragment"
            app:destination="@id/EditaVendaFragment" />
        <action
            android:id="@+id/action_ListaVendaFragment_to_eliminaVendaFragment"
            app:destination="@id/eliminaVendaFragment" />
        <action
            android:id="@+id/action_ListaVendaFragment_to_webActivity"
            app:destination="@id/webActivity" />
    </fragment>
    <fragment
        android:id="@+id/NovoVendaFragment"
        android:name="ipg.mcm.cacaub.NovoVendaFragment"
        android:label="@string/nova_venda_fragment_label"
        tools:layout="@layout/fragment_novo_venda">
        <action
            android:id="@+id/action_NovoVendaFragment_to_ListaVendaFragment"
            app:destination="@id/ListaVendaFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditaVendaFragment"
        android:name="ipg.mcm.cacaub.EditaVendaFragment"
        android:label="@string/altera_venda_fragment_label"
        tools:layout="@layout/fragment_edita_venda">
        <action
            android:id="@+id/action_editaVendaFragment_to_ListaVendaFragment"
            app:destination="@id/ListaVendaFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminaVendaFragment"
        android:name="ipg.mcm.cacaub.EliminaVendaFragment"
        android:label="@string/elimina_venda_fragment_label"
        tools:layout="@layout/fragment_elimina_venda">
        <action
            android:id="@+id/action_eliminaVendaFragment_to_ListaVendaFragment"
            app:destination="@id/ListaVendaFragment" />
    </fragment>
    <activity
        android:id="@+id/webActivity"
        android:name="ipg.mcm.cacaub.WebActivity"
        android:label="activity_web"
        tools:layout="@layout/activity_web" >

    </activity>
</navigation>