<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminaVendaFragment">

    <TextView
        android:id="@+id/textViewLabelTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_atividade"
        android:layout_marginTop="@dimen/margem_atividade"
        android:layout_marginEnd="@dimen/margem_atividade"
        android:text="@string/descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_entre_campos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textViewLabelTitulo"
        app:layout_constraintStart_toStartOf="@+id/textViewLabelTitulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTitulo"
        tools:text="Título" />

    <TextView
        android:id="@+id/textViewLabelValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_atividade"
        android:text="@string/Valor"
        app:layout_constraintEnd_toEndOf="@+id/textViewDescricao"
        app:layout_constraintStart_toStartOf="@+id/textViewDescricao"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao" />

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_entre_campos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textViewLabelValor"
        app:layout_constraintStart_toStartOf="@+id/textViewLabelValor"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelValor"
        tools:text="Valor" />

    <TextView
        android:id="@+id/textViewLabelOrador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_atividade"
        android:text="@string/empresa"
        app:layout_constraintEnd_toEndOf="@+id/textViewValor"
        app:layout_constraintStart_toStartOf="@+id/textViewValor"
        app:layout_constraintTop_toBottomOf="@+id/textViewValor" />

    <TextView
        android:id="@+id/textViewNomeEmpresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_entre_campos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textViewLabelOrador"
        app:layout_constraintStart_toStartOf="@+id/textViewLabelOrador"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelOrador"
        tools:text="Empresa" />

</androidx.constraintlayout.widget.ConstraintLayout>